# knowledge-jobs

./: PLAN.md  build_site_data.py  process.py  pyproject.toml  thesis.md  tier.py  tiers.json  vendors.json
site/: data.json  index.html  thesis.json
