[project]
name = "jobs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.70.0",
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "markdown>=3.7",
    "playwright>=1.58.0",
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
]
